@@ -18,12 +18,11 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks that the error shown if the copybook that is used in the Cobol file contains a
@@ -48,7 +47,7 @@ class TestCopybookWithRecursiveDependencyIsDetected {
 
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(REC_CPY_NAME, REC_CPY)),
-        Map.of("1", new Diagnostic(null, MESSAGE, DiagnosticSeverity.Error, SourceInfoLevels.ERROR.getText())));
+        ImmutableList.of(new CobolText(REC_CPY_NAME, REC_CPY)),
+        ImmutableMap.of("1", new Diagnostic(null, MESSAGE, DiagnosticSeverity.Error, SourceInfoLevels.ERROR.getText())));
   }
 }
