@@ -15,10 +15,9 @@
 package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /** This test checks that performing defined paragraph processed correctly */
 class TestParagraphDefined {
@@ -35,7 +34,7 @@ class TestParagraphDefined {
 
   @Test
   void test() {
-      UseCaseEngine.runTest(TEXT, List.of(), Map.of());
+      UseCaseEngine.runTest(TEXT, ImmutableList.of(), ImmutableMap.of());
   }
 
 }
