@@ -17,12 +17,11 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 import static com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels.ERROR;
 
@@ -55,8 +54,8 @@ class TestReplacingForSeveralTokensInOneLine {
   void test() {
     UseCaseEngine.runTest(
         DOCUMENT,
-        List.of(new CobolText(REPL_NAME, REPL)),
-        Map.of(
+        ImmutableList.of(new CobolText(REPL_NAME, REPL)),
+        ImmutableMap.of(
             "invalid", new Diagnostic(null, MESSAGE, DiagnosticSeverity.Error, ERROR.getText())));
   }
 }
