@@ -18,12 +18,11 @@ package com.broadcom.lsp.cobol.usecases;
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.service.delegates.validations.SourceInfoLevels;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.eclipse.lsp4j.Diagnostic;
 import org.eclipse.lsp4j.DiagnosticSeverity;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks grammar does not consume more tokens than necessary in REPLACING statement.
@@ -57,8 +56,8 @@ class TestReplacingWithDifferentPatternsShowsError {
   void test() {
     UseCaseEngine.runTest(
         TEXT,
-        List.of(new CobolText(NEW2_NAME, NEW2)),
-        Map.of(
+        ImmutableList.of(new CobolText(NEW2_NAME, NEW2)),
+        ImmutableMap.of(
             "1",
             new Diagnostic(
                 null, MESSAGE, DiagnosticSeverity.Error, SourceInfoLevels.ERROR.getText())));
