@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks that there is no error thrown when there are several COPY statements one by one
@@ -47,6 +46,6 @@ class TestSameCopybooksWithDifferentCases {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(CPY_NAME, STRUCT1)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(CPY_NAME, STRUCT1)), ImmutableMap.of());
   }
 }
