@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test checks that structured variable calls with skipped intermediate levels don't produce
@@ -51,6 +50,6 @@ class TestVariableCallsWithSkippedLevels {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(ASDQWE_NAME, ASDQWE)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(ASDQWE_NAME, ASDQWE)), ImmutableMap.of());
   }
 }
