@@ -17,10 +17,9 @@ package com.broadcom.lsp.cobol.usecases;
 
 import com.broadcom.lsp.cobol.positive.CobolText;
 import com.broadcom.lsp.cobol.usecases.engine.UseCaseEngine;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
-import java.util.Map;
 
 /**
  * This test verifies that the variable structure can be built correctly with copybooks and that
@@ -47,6 +46,6 @@ class TestVariableStructureInCopybooksWithMissingLevels {
 
   @Test
   void test() {
-    UseCaseEngine.runTest(TEXT, List.of(new CobolText(STRUCT_NAME, STRUCT)), Map.of());
+    UseCaseEngine.runTest(TEXT, ImmutableList.of(new CobolText(STRUCT_NAME, STRUCT)), ImmutableMap.of());
   }
 }
